--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,19 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+###> symfony/webpack-encore-bundle ###
+/node_modules
+/yarn-error.log
+###< symfony/idea ###
+###> symfony/idea ###
+.idea/*
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
